--- a/Asteroid-V2-Sockets/public/main.css
+++ b/Asteroid-V2-Sockets/public/main.css
@@ -5,6 +5,7 @@ canvas {
 body {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
